fixed text alignment in hero section

--- a/styles.css
+++ b/styles.css
@@ -72,20 +72,23 @@ body {
 /* headings */ 
 
 h1, h2, h3, h4 {
-    font-weight: 600;
+    font-weight: 300;
+    text-align: left;
+    padding-left: 5%;
 }
 
 h1 {
     font-size: 3.6rem;
     text-transform: uppercase;
+    
 }
 
 h2 {
-    font-size: 2.8rem;
+    font-size: 1.9rem;
 }
 
 h3 {
-    font-size: 1.9rem;
+    font-size: 2rem;
 }
 
 
@@ -220,8 +223,8 @@ a {
 
   .hero-section {
     position: absolute;
-    bottom: 8px;
-    left: 16px;
+    bottom: 350px;
+    left: 8px;
     justify-content: center;
  }
 
